@@ -1,3 +1,5 @@
+* Reduce variables used in compileSelector(), replace a compatMode check with `isQuirks` and modify a couple code comments. [jddalton]
+
 * Make compileSelector() ensure element exists before checking nodeType on adjacent sibling selectors. [jddalton]
 
 * Make `UID`'s property name harder to conflict with. [Diego Perini, jddalton]
